--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "webpack-cli": "^3.3.11"
   },
   "browserslist": [
     "> 1%",
@@ -23,11 +24,11 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.5.3",
     "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "latest",
+    "webpack": "latest",
+    "webpack-dev-server": "latest"
   }
 }
