--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "webpack-cli": "^3.3.11"
+    "vuex": "^3.5.1",
+    "webpack-cli": "^3.3.12"
   },
   "browserslist": [
     "> 1%",
@@ -22,13 +23,15 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^3.5.3",
+    "css-loader": "^3.6.0",
     "file-loader": "^1.1.4",
     "vue-loader": "14.2.2",
     "vue-template-compiler": "latest",
     "webpack": "latest",
-    "webpack-dev-server": "latest"
+    "webpack-dev-server": "^3.11.0"
   }
 }
