--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-loader": "^1.1.4",
     "vue-loader": "14.2.2",
     "vue-template-compiler": "latest",
-    "webpack": "latest",
+    "webpack": "^5.3.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
